Fix spacing in App.js

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,4 +1,9 @@
 $myAlign: center;
+$headGoat: 55%;
+
+#header {
+  margin-bottom: $headGoat;
+}
 
 .App {
   text-align: $myAlign;
